# flakeaway

./: README.md  dream-lock.json  flake.nix  flakeaway.hs  nixos-module.nix  node-packages.nix  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: resolve-dependencies.yml
cli/: package-lock.json  package.json
cli/src/: index.js  secrets.js
evaluator/: README.md  default.nix  flakeaway-evaluator.cc  meson.build
server/: package-lock.json  package.json  tsconfig.json
server/src/: cachix.js  forges.js  index.js  log.js
server/src/config/: config.js  schema.json  secrets.js
server/src/forges/: github.js
server/src/jobs/: build.js  evaluate.js
server/src/nix/: build.js  evaluate.js  nix.js
src/: ansi.js  build.js  cachix.js  evaluate.js  flake.js  flakeaway.js  github.js  log.js  nix.js
src/config/: config.js  schema.json  secrets.js
src/forges/: github.js
src/jobs/: build.js  evaluate.js
src/nix/: build.js  evaluate.js  flake.js
src/nix/evaluate/: evaluate.js  evaluate.nix
